keep background fixed on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,8 @@ body {
   background-image: url("../assets/blumblumblum-background.png");
   background-position: center;
   background-repeat: repeat;
-  background-size: auto 100%;
+  background-size: cover;
+  background-attachment: fixed;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -161,6 +162,20 @@ li:hover {
 
   .container {
     padding: 20px 0;
+  }
+
+  body {
+    background-size: cover;
+    min-height: 100vh;
+    height: 100%;
+    position: fixed;
+    width: 100%;
+  }
+
+  .container {
+    height: 100%;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
   }
 }
 
